--- a/main.bib
+++ b/main.bib
@@ -1,3 +1,68 @@
+@article{Schloss2009:introducing,
+  title={Introducing mothur: open-source, platform-independent, community-supported software for describing and comparing microbial communities},
+  author={Schloss, Patrick D and Westcott, Sarah L and Ryabin, Thomas and Hall, Justine R and Hartmann, Martin and Hollister, Emily B and Lesniewski, Ryan A and Oakley, Brian B and Parks, Donovan H and Robinson, Courtney J and others},
+  journal={Applied and environmental microbiology},
+  volume={75},
+  number={23},
+  pages={7537--7541},
+  year={2009},
+  publisher={Am Soc Microbiol}
+}
+
+@article{Chen2013:comparison,
+  title={A comparison of methods for clustering 16S rRNA sequences into OTUs},
+  author={Chen, Wei and Zhang, Clarence K and Cheng, Yongmei and Zhang, Shaowu and Zhao, Hongyu},
+  journal={PloS one},
+  volume={8},
+  number={8},
+  pages={e70837},
+  year={2013},
+  publisher={Public Library of Science}
+}
+
+@article{Callahan2017:exact,
+  title={Exact sequence variants should replace operational taxonomic units in marker-gene data analysis},
+  author={Callahan, Benjamin J and McMurdie, Paul J and Holmes, Susan P},
+  journal={The ISME journal},
+  volume={11},
+  number={12},
+  pages={2639},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+
+@article{Breitburg2018:declining,
+  title={Declining oxygen in the global ocean and coastal waters},
+  author={Breitburg, Denise and Levin, Lisa A and Oschlies, Andreas and Gr{\'e}goire, Marilaure and Chavez, Francisco P and Conley, Daniel J and Gar{\c{c}}on, V{\'e}ronique and Gilbert, Denis and Guti{\'e}rrez, Dimitri and Isensee, Kirsten and others},
+  journal={Science},
+  volume={359},
+  number={6371},
+  pages={eaam7240},
+  year={2018},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{Ito2017:upper,
+  title={Upper ocean O2 trends: 1958--2015},
+  author={Ito, Takamitsu and Minobe, Shoshiro and Long, Matthew C and Deutsch, Curtis},
+  journal={Geophysical Research Letters},
+  volume={44},
+  number={9},
+  pages={4214--4223},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+@article{Hallam2017:monitoring,
+  title={Monitoring microbial responses to ocean deoxygenation in a model oxygen minimum zone},
+  author={Hallam, Steven J and Torres-Beltr{\'a}n, M{\'o}nica and Hawley, Alyse K},
+  journal={Scientific data},
+  volume={4},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+
 @article{Hawley2017:compendium,
   title={A compendium of multi-omic sequence information from the Saanich Inlet water column},
   author={Hawley, Alyse K and Torres-Beltr{\'a}n, M{\'o}nica and Zaikova, Elena and Walsh, David A and Mueller, Andreas and Scofield, Melanie and Kheirandish, Sam and Payne, Chris and Pakhomova, Larysa and Bhatia, Maya and others},
