fixed few errors

--- a/main_noecho.Rmd
+++ b/main_noecho.Rmd
@@ -73,7 +73,7 @@ scale_fill_discrete <-  function(palname=pal, ...){
 
 [Talk about microbial community deriving the most biogeochemical forces with citations]. The wide diversity of microbes present in the different ecosystem implies that an almost infinite number of individuals needs to be identified to accurately describe such communities. Nevertheless, the advancements in analyzing high-throughput marker-gene sequencing data made it feasible to construct molecular operational taxonomic units (OTUs) through clustering the sequencing reads using a variety of dissimilarity distance methods [@Chen2013:comparison]. Another compelling approach to cluster group of reads is based on amplicon sequence variants (ASVs) [@Callahan2017:exact]. 
 
-We resort to studying microbial composition obtained from Saanich Inlet oxygen minimum zone (OMZ). Saanich Inlet is a seasonally anoxic fjord on the coast of Vancouver Island, British Columbia, Canada [@Hawley2017:compendium;Torres2017:compendium]. Most of the year, the fjord has an anoxic basin. At the end of summer, oxic waters flow into the basin, resulting in renewing the oxygen. From an OMZ research perspective, the Saanich Inlet is considered important as it provides an opportunity to study microbial ecology and various nutrient cycling in OMZs  particularly under oxic-anoxic shifts [@Hallam2017:monitoring] [You might add additional information]
+We resort to studying microbial composition obtained from Saanich Inlet oxygen minimum zone (OMZ). Saanich Inlet is a seasonally anoxic fjord on the coast of Vancouver Island, British Columbia, Canada [@Hawley2017:compendium;@Torres2017:compendium]. Most of the year, the fjord has an anoxic basin. At the end of summer, oxic waters flow into the basin, resulting in renewing the oxygen. From an OMZ research perspective, the Saanich Inlet is considered important as it provides an opportunity to study microbial ecology and various nutrient cycling in OMZs  particularly under oxic-anoxic shifts [@Hallam2017:monitoring] [You might add additional information]
 
 Planctomyces is .... [Why did you choose this genus why is it important to study?]
 
@@ -152,7 +152,7 @@ We used the Saanich Inlet dataset that was preprocessed using mothur and QIIME2.
 
 Motivated by the recent report [@Breitburg2018:declining] regarding the oxygen depletion in the global in the global ocean, we analyze [the contribution of microbes and their existence along .... Fill]. Hereby, we try to understand the compositional complexity of a microbial community across Saanich Inlet samples. For this, we use Shannon's diversity index (SDI), which considers both the species abundances and the total number of distinct species in its diversity estimation. Figures 1(a) and 2(a) depicts Shannon's diversity index for mothur and QIIME2 datasets. Immediately, we observe that SDI values peak at depth $10$ and $100$ before monotonically decreasing at $200$. The SDI values are maximal when the microbes are evenly distributed. Indeed, Figure 3 supports our claim, and we see an uneven distribution of Phylum at $200$ more than at $10$ or $100$ depths. However, the Shannon index values do not capture the number of different species or richness varying across depths. Instead, Figures 1(a) and 2(a) shed some light in this regard. 
 
-Similarly, by analyzing the association between oxygen concentration within a microbial community, we observe, as in Figures 1(b) and 2(b), that SDI values increase when oxygen become more abundant. This is not surprising since the abundance of oxygen indicates..... [FILL]. The boxplots in Figures 1(c) and 2(c) supports this evidence too. Another compleing observation that follows the work in [@Breitburg2018:declining;Hawley2017:compendium] is the oxygen depletion along the water columns, as illustrated in Figures 1(d) and 2(d). 
+Similarly, by analyzing the association between oxygen concentration within a microbial community, we observe, as in Figures 1(b) and 2(b), that SDI values increase when oxygen become more abundant. This is not surprising since the abundance of oxygen indicates..... [FILL]. The boxplots in Figures 1(c) and 2(c) supports this evidence too. Another compleing observation that follows the work in [@Breitburg2018:declining;@Hawley2017:compendium] is the oxygen depletion along the water columns, as illustrated in Figures 1(d) and 2(d). 
 
 [ADD and EDIT]
 
