--- a/main.bib
+++ b/main.bib
@@ -1,84 +1,114 @@
-@article{Schloss2009:introducing,
-  title={Introducing mothur: open-source, platform-independent, community-supported software for describing and comparing microbial communities},
-  author={Schloss, Patrick D and Westcott, Sarah L and Ryabin, Thomas and Hall, Justine R and Hartmann, Martin and Hollister, Emily B and Lesniewski, Ryan A and Oakley, Brian B and Parks, Donovan H and Robinson, Courtney J and others},
-  journal={Applied and environmental microbiology},
-  volume={75},
-  number={23},
-  pages={7537--7541},
-  year={2009},
-  publisher={Am Soc Microbiol}
-}
-
-@article{Chen2013:comparison,
-  title={A comparison of methods for clustering 16S rRNA sequences into OTUs},
-  author={Chen, Wei and Zhang, Clarence K and Cheng, Yongmei and Zhang, Shaowu and Zhao, Hongyu},
-  journal={PloS one},
-  volume={8},
-  number={8},
-  pages={e70837},
-  year={2013},
-  publisher={Public Library of Science}
-}
-
-@article{Callahan2017:exact,
-  title={Exact sequence variants should replace operational taxonomic units in marker-gene data analysis},
-  author={Callahan, Benjamin J and McMurdie, Paul J and Holmes, Susan P},
-  journal={The ISME journal},
-  volume={11},
-  number={12},
-  pages={2639},
-  year={2017},
-  publisher={Nature Publishing Group}
-}
+% This file was created with JabRef 2.10.
+% Encoding: UTF-8
 
 
-@article{Breitburg2018:declining,
-  title={Declining oxygen in the global ocean and coastal waters},
-  author={Breitburg, Denise and Levin, Lisa A and Oschlies, Andreas and Gr{\'e}goire, Marilaure and Chavez, Francisco P and Conley, Daniel J and Gar{\c{c}}on, V{\'e}ronique and Gilbert, Denis and Guti{\'e}rrez, Dimitri and Isensee, Kirsten and others},
-  journal={Science},
-  volume={359},
-  number={6371},
-  pages={eaam7240},
-  year={2018},
-  publisher={American Association for the Advancement of Science}
+@Article{Breitburg2018:declining,
+  Title                    = {Declining oxygen in the global ocean and coastal waters},
+  Author                   = {Breitburg, Denise and Levin, Lisa A and Oschlies, Andreas and Gr{\'e}goire, Marilaure and Chavez, Francisco P and Conley, Daniel J and Gar{\c{c}}on, V{\'e}ronique and Gilbert, Denis and Guti{\'e}rrez, Dimitri and Isensee, Kirsten and others},
+  Journal                  = {Science},
+  Year                     = {2018},
+  Number                   = {6371},
+  Pages                    = {eaam7240},
+  Volume                   = {359},
+
+  Publisher                = {American Association for the Advancement of Science}
 }
 
-@article{Ito2017:upper,
-  title={Upper ocean O2 trends: 1958--2015},
-  author={Ito, Takamitsu and Minobe, Shoshiro and Long, Matthew C and Deutsch, Curtis},
-  journal={Geophysical Research Letters},
-  volume={44},
-  number={9},
-  pages={4214--4223},
-  year={2017},
-  publisher={Wiley Online Library}
-}
-@article{Hallam2017:monitoring,
-  title={Monitoring microbial responses to ocean deoxygenation in a model oxygen minimum zone},
-  author={Hallam, Steven J and Torres-Beltr{\'a}n, M{\'o}nica and Hawley, Alyse K},
-  journal={Scientific data},
-  volume={4},
-  year={2017},
-  publisher={Nature Publishing Group}
+@Article{Callahan2017:exact,
+  Title                    = {Exact sequence variants should replace operational taxonomic units in marker-gene data analysis},
+  Author                   = {Callahan, Benjamin J and McMurdie, Paul J and Holmes, Susan P},
+  Journal                  = {The ISME journal},
+  Year                     = {2017},
+  Number                   = {12},
+  Pages                    = {2639},
+  Volume                   = {11},
+
+  Publisher                = {Nature Publishing Group}
 }
 
+@Article{Chen2013:comparison,
+  Title                    = {A comparison of methods for clustering 16S rRNA sequences into OTUs},
+  Author                   = {Chen, Wei and Zhang, Clarence K and Cheng, Yongmei and Zhang, Shaowu and Zhao, Hongyu},
+  Journal                  = {PloS one},
+  Year                     = {2013},
+  Number                   = {8},
+  Pages                    = {e70837},
+  Volume                   = {8},
 
-@article{Hawley2017:compendium,
-  title={A compendium of multi-omic sequence information from the Saanich Inlet water column},
-  author={Hawley, Alyse K and Torres-Beltr{\'a}n, M{\'o}nica and Zaikova, Elena and Walsh, David A and Mueller, Andreas and Scofield, Melanie and Kheirandish, Sam and Payne, Chris and Pakhomova, Larysa and Bhatia, Maya and others},
-  journal={Scientific data},
-  volume={4},
-  pages={170160},
-  year={2017},
-  publisher={Nature Publishing Group}
+  Publisher                = {Public Library of Science}
 }
 
-@article{Torres2017:compendium,
-  title={A compendium of geochemical information from the Saanich Inlet water column},
-  author={Torres-Beltr{\'a}n, M{\'o}nica and Hawley, Alyse K and Capelle, David and Zaikova, Elena and Walsh, David A and Mueller, Andreas and Scofield, Melanie and Payne, Chris and Pakhomova, Larysa and Kheirandish, Sam and others},
-  journal={Scientific data},
-  volume={4},
-  pages={170159},
-  year={2017},
-  publisher={Nature Publishing Group}
+@Article{Finotello2016:measuring,
+  Title                    = {Measuring the diversity of the human microbiota with targeted next-generation sequencing},
+  Author                   = {Finotello, Francesca and Mastrorilli, Eleonora and Di Camillo, Barbara},
+  Journal                  = {Briefings in bioinformatics},
+  Year                     = {2016},
+  Pages                    = {bbw119},
+
+  Publisher                = {Oxford University Press}
 }
+
+@Article{Hallam2017:monitoring,
+  Title                    = {Monitoring microbial responses to ocean deoxygenation in a model oxygen minimum zone},
+  Author                   = {Hallam, Steven J and Torres-Beltr{\'a}n, M{\'o}nica and Hawley, Alyse K},
+  Journal                  = {Scientific data},
+  Year                     = {2017},
+  Volume                   = {4},
+
+  Publisher                = {Nature Publishing Group}
+}
+
+@Book{Hastie2009:elements,
+  Title                    = {The elements of statistical learning: data mining, inference and prediction},
+  Author                   = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+  Publisher                = {Springer},
+  Year                     = {2009},
+  Edition                  = {2}
+}
+
+@Article{Hawley2017:compendium,
+  Title                    = {A compendium of multi-omic sequence information from the Saanich Inlet water column},
+  Author                   = {Hawley, Alyse K and Torres-Beltr{\'a}n, M{\'o}nica and Zaikova, Elena and Walsh, David A and Mueller, Andreas and Scofield, Melanie and Kheirandish, Sam and Payne, Chris and Pakhomova, Larysa and Bhatia, Maya and others},
+  Journal                  = {Scientific data},
+  Year                     = {2017},
+  Pages                    = {170160},
+  Volume                   = {4},
+
+  Publisher                = {Nature Publishing Group}
+}
+
+@Article{Ito2017:upper,
+  Title                    = {Upper ocean O2 trends: 1958--2015},
+  Author                   = {Ito, Takamitsu and Minobe, Shoshiro and Long, Matthew C and Deutsch, Curtis},
+  Journal                  = {Geophysical Research Letters},
+  Year                     = {2017},
+  Number                   = {9},
+  Pages                    = {4214--4223},
+  Volume                   = {44},
+
+  Publisher                = {Wiley Online Library}
+}
+
+@Article{Schloss2009:introducing,
+  Title                    = {Introducing mothur: open-source, platform-independent, community-supported software for describing and comparing microbial communities},
+  Author                   = {Schloss, Patrick D and Westcott, Sarah L and Ryabin, Thomas and Hall, Justine R and Hartmann, Martin and Hollister, Emily B and Lesniewski, Ryan A and Oakley, Brian B and Parks, Donovan H and Robinson, Courtney J and others},
+  Journal                  = {Applied and environmental microbiology},
+  Year                     = {2009},
+  Number                   = {23},
+  Pages                    = {7537--7541},
+  Volume                   = {75},
+
+  Publisher                = {Am Soc Microbiol}
+}
+
+@Article{Torres2017:compendium,
+  Title                    = {A compendium of geochemical information from the Saanich Inlet water column},
+  Author                   = {Torres-Beltr{\'a}n, M{\'o}nica and Hawley, Alyse K and Capelle, David and Zaikova, Elena and Walsh, David A and Mueller, Andreas and Scofield, Melanie and Payne, Chris and Pakhomova, Larysa and Kheirandish, Sam and others},
+  Journal                  = {Scientific data},
+  Year                     = {2017},
+  Pages                    = {170159},
+  Volume                   = {4},
+
+  Publisher                = {Nature Publishing Group}
+}
+
